# Text_analysis

./: .dockerignore  .gitignore  .gitmodules  12.py  Dockerfile  README.md  display.py  functions.py  pyproject.toml  script.py  test.py  toolkit.nu  yapi.py
bench/: analyse.nu  paragraph+heading.json  paragraph+plain.json  plot.py  size-256+heading.json  size-256+plain.json  size-512+heading.json  size-512+plain.json
src/: functions.py  qudrant.py  search.py  yapi.py
src/pipeline/: __init__.py  chunk.py  convert.py  embed.py  md.py  qdrant.py  sentence.py
src/util/: convert.py  match.py  pdf.py  qdrant.py  ratelimit.py  sbert.py  yapi.py
