[tool.poetry]
name = "text-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
numpy = "^1.0.0"
scipy = "^1.14.0"
qdrant-client = "^1.10.1"
pikepdf = "^9.0.0"
nltk = "^3.8.1"
sentence_transformers = "^3.0.1"
torch = {version = "^2.3.1+cpu", source = "pytorch_cpu"}


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
