[tool.poetry]
name = "text-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
numpy = "^1.0.0"
qdrant-client = "^1.10.1"
pikepdf = "^9.0.0"
sentence_transformers = "^3.0.1"
torch = {version = "^2.3.1+cpu", source = "pytorch_cpu"}
ru_core_news_sm = {url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.7.0/ru_core_news_sm-3.7.0.tar.gz"}
spacy = "^3.7.5"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
